Sat Jan 28 19:59:41 2006  Tim Janik  <timj@gtk.org>

	* docs/sfidl-manual.doxi:
	* docs/plugin-devel.doxi: converted to doxer markup, many
	markup fixes.

	* web/beastdefs.doxi: added more source code specific markup macros.

Sat Jan 28 18:20:18 2006  Tim Janik  <timj@gtk.org>

	* docs/architecture.doxi: converted to doxer markup.

	* web/Makefile: install docs/images/* under html/images/.

	* web/webmenu.doxi: renamed "NEWS File" menu entry which had a very
	confusing name before.

	* docs/beast-components.dia:
	* docs/beast-components.png:
	* docs/module-voices.dia:
	* docs/module-voices.png:
	* docs/beast-progs.dia:
	* docs/beast-progs.png: removed.

Sat Jan 28 18:07:14 2006  Tim Janik  <timj@gtk.org>

	* docs/images/beast-components.dia:
	* docs/images/beast-components.png:
	* docs/images/module-voices.dia:
	* docs/images/module-voices.png:
	* docs/images/beast-progs.dia:
	* docs/images/beast-progs.png: CVS copied here freom docs/.

Sat Jan 28 17:34:59 2006  Tim Janik  <timj@gtk.org>

	* web/wiki.doxi: converted to doxer markup.

	* web/webmenu.doxi:
	* web/search.doxi: correctly indicate search domain in the google
	search result list.

Sat Jan 28 16:06:04 2006  Tim Janik  <timj@gtk.org>

	* docs/sfidl.1.doxi:
	* docs/bsesh.1.doxi:
	* docs/beast.1.doxi: converted to doxer markup.

	* web/webmenu.doxi: added sfidl.1 to webmenu.

	* web/beastdefs.doxi: added manual page markup commands.

	* web/Makefile: build manual pages, listed unported files.

Tue Jan 24 03:25:26 2006  Tim Janik  <timj@gtk.org>

	* web/overview2003de.doxi: converted to doxer markup.

	* web/Makefile: added overview2003de and web-image rules.

	* web/oldnews.doxi: uri fixup.

	* web/webframe.doxi: implement small web banner.

	* docs/quickstart.doxi: use small web banner.

	* web/webmenu.doxi: minor fixups.

Mon Jan 23 23:58:08 2006  Tim Janik  <timj@gtk.org>

	* web/overview2003de.doxi: CVS moved here from ../docs/

Mon Jan 23 23:33:52 2006  Tim Janik  <timj@gtk.org>
