@@ -1,6 +1,6 @@
 @doxer_dnl      # emacs: -*- mode: texinfo; texinfo-open-quote: "\""; texinfo-close-quote: "\""; -*-
 @include "beastdefs.doxi"
-@doxer_set{menu-open} sound-archive
+@doxer_set{webmenu} sound-archive
 @include "webmenu.doxi"
 @doxer_set{title}	BSE Sound File Upload
 
